# romea-core-localisation-rtls

./: .gitlab-ci.yml  AUTHORS  CMakeLists.txt  README.md  package.xml  romea_localisation_rtls.repos  romea_localisation_rtls.rosinstall  romea_localisation_rtls_public.repos
cmake/: romea_core_localisation_rtlsConfig.cmake.in  romea_localisation_rtlsConfig.cmake.in
include/romea_core_localisation_rtls/: LocalisationRTLSPlugin.hpp  R2HLocalisationRTLSPlugin.hpp  R2RLocalisationRTLSPlugin.hpp  R2WLocalisationRTLSPlugin.hpp  TrilaterationDataBuffer.hpp  rtls_localisation_plugin_diagnostics.hpp  rtls_localisation_pose_estimator.hpp  rtls_localisation_position_estimator.hpp  rtls_localisation_ranges.hpp  rtls_localisation_simple_trilateration.hpp  rtls_localisation_transceivers.hpp
include/romea_localisation_rtls/: rtls_localisation_plugin_diagnostics.hpp  rtls_localisation_pose_estimator.hpp  rtls_localisation_position_estimator.hpp  rtls_localisation_ranges.hpp  rtls_localisation_simple_trilateration.hpp  rtls_localisation_transceivers.hpp
src/: LocalisationRTLSPlugin.cpp  R2HLocalisationRTLSPlugin.cpp  R2RLocalisationRTLSPlugin.cpp  R2WLocalisationRTLSPlugin.cpp  R2WlocalisationRTLSPlugin.cpp  TrilaterationDataBuffer.cpp  rtls_localisation_plugin_diagnostics.cpp  rtls_localisation_pose_estimator.cpp  rtls_localisation_position_estimator.cpp  rtls_localisation_ranges.cpp  rtls_localisation_simple_trilateration.cpp  rtls_localisation_transceivers.cpp
test/: CMakeLists.txt  test_pose_estimator.cpp  test_position_estimator.cpp  test_robot_to_human.cpp  test_robot_to_robot.cpp  test_simple_trilateration.cpp
